--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aboutweb/irrigable",
-  "version": "0.0.2",
-  "description": "",
+  "version": "0.0.3",
+  "description": "Build tool on top of gulp.",
   "main": "./src/index.js",
   "directories": {
     "lib": "src"
@@ -13,14 +13,14 @@
     "glob": "^7.1.3",
     "gulp-babel": "^8.0.0",
     "micromatch": "^3.1.10",
+    "node-sass": "^4.9.3",
     "rollup": "^0.66.2",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^3.4.0",
+    "uuid": "^3.3.2",
     "vinyl-fs": "^3.0.3",
-    "vinyl-sourcemaps-apply": "^0.2.1",
-    "node-sass": "^4.9.3",
-    "uuid": "^3.3.2"
+    "vinyl-sourcemaps-apply": "^0.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
